--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -27,6 +27,15 @@ $main-font: "Nunito", sans-serif;
 $display-font: "VCR OSD Mono", "Monaco", monospace;
 
 // --------------------------
+// RESPONSIVE BREAKPOINTS
+// --------------------------
+
+$breakpoint-large: 62.5em; // 1000px
+$breakpoint-medium: 50em; // 800px;
+$breakpoint-small: 37.5em; // 600px;
+$breakpoint-height: 42.5em; // 680px;
+
+// --------------------------
 // BASE PROJECT SETTINGS
 // --------------------------
 
@@ -43,7 +52,11 @@ $display-font: "VCR OSD Mono", "Monaco", monospace;
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+    font-size: 50%;
+
+	@media only screen and (min-width: $breakpoint-small) {
+        font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+	}
 }
 
 body {
