--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -5,8 +5,9 @@ body {
 // CONTAINER
 .container {
 	display: grid;
-	grid-template-columns: 65% 1fr;
-	grid-gap: 3rem;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr min-content;
+	grid-gap: 1rem;
 	justify-content: space-between;
 	width: 100%;
 	max-width: 80rem;
@@ -15,7 +16,13 @@ body {
 	background: $color-red;
 	border-radius: 1rem;
 	box-shadow: 0 0.5rem 0 0 darken($color-red, 10%), 0 0.5rem 2rem 0 rgba(black, 0.3);
-	padding: 4rem;
+	padding: 2.5rem;
+
+	@media only screen and (min-width: $breakpoint-medium) {
+		grid-gap: 3rem;
+		grid-template-columns: 65% 1fr;
+		grid-template-rows: 1fr;
+	}
 }
 
 // MAIN SCREEN
@@ -59,9 +66,14 @@ body {
 
 // SUB-SCREEN
 .sub-screen {
+	display: none;
 	@extend .main-screen;
 	height: 30rem;
 	font-size: 1.4rem;
+
+	@media only screen and (min-width: $breakpoint-medium) and (min-height: $breakpoint-height) {
+		display: block;
+	}
 }
 
 // STATUS BAR
@@ -70,6 +82,7 @@ body {
 	align-items: center;
 	list-style: none;
 	padding: 1rem;
+	margin-bottom: 1rem;
 
 	.status-bar__item {
 		flex: 0 0 50%;
