--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -45,7 +45,7 @@ body {
 		font-size: 2rem;
 
 		.main-screen__list-item {
-			margin: 0.25rem -1rem;
+			margin: 0.25rem 0;
 			padding: 0.75rem;
 
 			&.selected {
@@ -53,7 +53,7 @@ body {
 			}
 
 			&:last-child {
-				margin-bottom: 5rem;
+				margin-bottom: 1.5rem;
 			}
 		}
 
@@ -61,6 +61,32 @@ body {
 			font-size: 1.5rem;
 		}
 	}
+
+	.main-screen__controls {
+		display: flex;
+		border: 1px dotted $color-black;
+		padding: 1rem;
+		margin: 1rem 0;
+		position: sticky;
+		top: -2rem;
+		background: $color-beige;
+
+		.main-screen_button {
+			border: none;
+			background: none;
+			font-family: inherit;
+			font-size: 2rem;
+			margin-right: 1rem;
+			&:hover {
+				cursor: pointer;
+			}
+			&:last-child {
+				margin-left: auto;
+			}
+		}
+	}
+
+
 }
 
 // SIDEBAR
@@ -73,7 +99,7 @@ body {
 .sub-screen {
 	display: none;
 	@extend .main-screen;
-	height: 30rem;
+	height: 20rem;
 	font-size: 1.4rem;
 
 	@media only screen and (min-width: $breakpoint-medium) and (min-height: $breakpoint-height) {
@@ -124,14 +150,14 @@ body {
 // CONTROLS
 @mixin hover-states($hover-color) {
 	background-color: $hover-color;
-	box-shadow: 0 4px 0 darken($hover-color, 20%);
+	box-shadow: 0 3px 0 darken($hover-color, 20%);
 	&:hover {
-		transform: translateY(-4px);
-		box-shadow: 0 8px 0 darken($hover-color, 20%);
+		transform: translateY(-3px);
+		box-shadow: 0 6px 0 darken($hover-color, 20%);
 		cursor: pointer;
 	}
 	&:active {
-		transform: translateY(4px);
+		transform: translateY(3px);
 		box-shadow: 0 0px 0 darken($hover-color, 20%);
 	}
 }
@@ -141,6 +167,7 @@ body {
 	grid-gap: 1.5rem;
 	grid-template-columns: repeat(2, 1fr);
 	margin-top: auto;
+	backface-visibility: hidden;
 
 	[class^="controls"] {
 		display: flex;
