--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -33,7 +33,7 @@ $display-font: "VCR OSD Mono", "Monaco", monospace;
 $breakpoint-large: 62.5em; // 1000px
 $breakpoint-medium: 50em; // 800px;
 $breakpoint-small: 37.5em; // 600px;
-$breakpoint-height: 42.5em; // 680px;
+$breakpoint-height: 37.5em; // 680px;
 
 // --------------------------
 // BASE PROJECT SETTINGS
@@ -52,9 +52,9 @@ $breakpoint-height: 42.5em; // 680px;
 
 html {
     box-sizing: border-box;
-    font-size: 45%;
+    font-size: 50%;
 
-	@media only screen and (min-width: $breakpoint-small) {
+	@media only screen and (min-width: $breakpoint-medium) {
         font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
 	}
 }
