--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -1,5 +1,8 @@
 body {
 	padding: 4rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 // CONTAINER
@@ -10,16 +13,16 @@ body {
 	grid-gap: 1rem;
 	justify-content: space-between;
 	width: 100%;
-	max-width: 80rem;
-	min-height: calc(100vh - 8rem);
-	max-height: calc(100vh - 8rem);
+	max-width: 90rem;
+	height: calc(100vh - 8rem);
+	max-height: 700px;
 	margin: auto;
 	background: $color-red;
 	border-radius: 1rem;
 	box-shadow: 0 0.5rem 0 0 darken($color-red, 10%), 0 0.5rem 2rem 0 rgba(black, 0.3);
 	padding: 2.5rem;
 
-	@media only screen and (min-width: $breakpoint-medium) {
+	@media only screen and (min-width: $breakpoint-small) {
 		grid-gap: 3rem;
 		grid-template-columns: 65% 1fr;
 		grid-template-rows: 1fr;
@@ -34,6 +37,7 @@ body {
 	font-family: $display-font;
 	color: $color-black;
 	overflow: auto;
+	max-height: calc(700px - 5rem);
 
 	.main-screen__title {
 		font-size: 3rem;
@@ -41,19 +45,22 @@ body {
 	}
 
 	.main-screen__list {
+		display: flex;
+		flex-wrap: wrap;
 		list-style: none;
-		font-size: 2rem;
+		font-size: 1.8rem;
+		margin-bottom: 2rem;
 
 		.main-screen__list-item {
-			margin: 0.25rem 0;
-			padding: 0.75rem;
+			flex: 1 0 48%;
+			margin: 0.5rem;
+			padding: 0.5rem;
+			border-bottom: 2px dotted darken($color-beige, 10%);
+			transition: all 0.1s ease-in;
 
-			&.selected {
-				border: 2px dotted $color-green;
-			}
-
-			&:last-child {
-				margin-bottom: 1.5rem;
+			&:hover {
+				border-bottom: 2px dotted $color-green;
+				cursor: pointer;
 			}
 		}
 
@@ -64,35 +71,50 @@ body {
 
 	.main-screen__controls {
 		display: flex;
-		border: 1px dotted $color-black;
+		flex-wrap: wrap;
+		align-items: center;
+		border: 2px dotted darken($color-beige, 50%);
 		padding: 1rem;
 		margin: 1rem 0;
 		position: sticky;
 		top: -2rem;
 		background: $color-beige;
 
-		.main-screen_button {
+		.main-screen__button {
 			border: none;
 			background: none;
 			font-family: inherit;
-			font-size: 2rem;
+			font-size: 1.4rem;
 			margin-right: 1rem;
+			transition: all 0.1s ease-in;
+
 			&:hover {
 				cursor: pointer;
+				color: $color-green;
 			}
-			&:last-child {
+
+			&:disabled {
+				pointer-events: none;
+			}
+		}
+
+		.main-screen__index {
+			display: none;
+
+			@media only screen and (min-width: $breakpoint-small) {
+				display: block;
 				margin-left: auto;
+				font-size: 1.2rem;
 			}
 		}
 	}
-
-
 }
 
 // SIDEBAR
 .sidebar {
 	display: flex;
 	flex-direction: column;
+	max-height: calc(700px - 5rem);
 }
 
 // SUB-SCREEN
@@ -150,14 +172,14 @@ body {
 // CONTROLS
 @mixin hover-states($hover-color) {
 	background-color: $hover-color;
-	box-shadow: 0 3px 0 darken($hover-color, 20%);
+	box-shadow: 0 2px 0 darken($hover-color, 20%);
 	&:hover {
-		transform: translateY(-3px);
-		box-shadow: 0 6px 0 darken($hover-color, 20%);
+		transform: translateY(-2px);
+		box-shadow: 0 4px 0 darken($hover-color, 20%);
 		cursor: pointer;
 	}
 	&:active {
-		transform: translateY(3px);
+		transform: translateY(2px);
 		box-shadow: 0 0px 0 darken($hover-color, 20%);
 	}
 }
@@ -165,7 +187,7 @@ body {
 .controls {
 	display: grid;
 	grid-gap: 1.5rem;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
 	margin-top: auto;
 	backface-visibility: hidden;
 
@@ -192,12 +214,10 @@ body {
 	}
 
 	.controls__enter {
-		grid-column: 1 / -1;
 		@include hover-states($color-green);
 	}
 
 	.controls__return {
-		grid-column: 1 / -1;
 		@include hover-states($color-grey);
 	}
 }
