--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -52,8 +52,8 @@ body {
 		margin-bottom: 2rem;
 
 		.main-screen__list-item {
-			flex: 1 0 48%;
-			margin: 0.5rem;
+			flex: 1 0 46.5%;
+			margin: 0.5rem 1.5%;
 			padding: 0.5rem;
 			border-bottom: 2px dotted darken($color-beige, 10%);
 			transition: all 0.1s ease-in;
@@ -73,7 +73,7 @@ body {
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
-		border: 2px dotted darken($color-beige, 50%);
+		border: 2px dotted darken($color-beige, 10%);
 		padding: 1rem;
 		margin: 1rem 0;
 		position: sticky;
