--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -42,6 +42,7 @@ body {
 	.main-screen__title {
 		font-size: 3rem;
 		font-weight: normal;
+		text-transform: capitalize;
 	}
 
 	.main-screen__list {
@@ -57,6 +58,7 @@ body {
 			padding: 0.5rem;
 			border-bottom: 2px dotted darken($color-beige, 10%);
 			transition: all 0.1s ease-in;
+			text-transform: capitalize;
 
 			&:hover {
 				border-bottom: 2px dotted $color-green;
