Styling of second screen

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -111,7 +111,7 @@ body {
 		}
 	}
 
-	.main-screen__stats {
+	.stats {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-template-areas:
@@ -121,8 +121,9 @@ body {
 			"previous		next";
 		grid-gap: 2rem;
 
-		.main-screen__title {
+		.title {
 			grid-area: title;
+			@extend .main-screen__title;
 		}
 
 		.front-image {
@@ -133,51 +134,50 @@ body {
 			grid-area: b-image;
 		}
 
-		.main-screen__stats-image {
+		.stats-image img {
 			border: 2px dotted darken($color-beige, 10%);
-
-			img {
-				width: 100%;
-				filter: grayscale(100%);
-				mix-blend-mode: multiply;
-			}
+			width: 100%;
+			filter: grayscale(100%);
+			mix-blend-mode: multiply;
 		}
 
-		.main-screen__stats-overall {
+		.stats-overall {
 			grid-area: stats;
-			// .main-screen__stats-prefix {
-			// 	text-transform: uppercase;
-			// 	display: block;
-			// 	font-size: 1.6rem;
-			// }
+			font-size: 2rem;
 
-			// .main-screen__stats-height,
-			// .main-screen__stats-weight {
-			// 	grid-column: span 1;
-			// 	font-size: 2rem;
-			// }
+			.stats-entry {
+				margin-bottom: 1.5rem;
+			}
 
-			.main-screen__stats-type {
-				font-size: 2rem;
+			.stats-prefix {
+				text-transform: uppercase;
+				display: block;
+				font-size: 1.6rem;
+			}
 
-				ul {
-					list-style: none;
-					text-transform: capitalize;
+			.stats-type {
+				display: inline-block;
+				text-transform: capitalize;
+				margin-right: 1rem;
+			}
 
-					li {
-						display: inline-block;
-						margin-right: 1rem;
-					}
+			.stats-base {
+				list-style: none;
+				text-transform: capitalize;
+				li {
+					margin: 0.5rem 0;
+					padding: 0.5rem 0;
+					border-bottom: 2px dotted darken($color-beige, 10%);
 				}
 			}
 		}
 
-		.main-screen__stats-base {
+		.stats-base {
 			grid-area: stats;
 			font-size: 1.6rem;
 			text-transform: capitalize;
 
-			.main-screen__stats-base-list {
+			.stats-base-list {
 				list-style: none;
 				display: grid;
 				grid-template-columns: repeat(2, 1fr);
@@ -191,7 +191,7 @@ body {
 			}
 		}
 
-		.main-screen__stats-controls {
+		.stats-controls {
 			grid-column: span 4;
 		}
 	}
