--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -14,11 +14,12 @@ $color-black: #1a1a1a;
 // --------------------------
 
 @font-face {
-    font-family: "VCR OSD Mono";
-    src: url("~@/assets/fonts/VCROSDMono.woff2") format("woff2"), url("~@/assets/fonts/VCROSDMono.woff") format("woff");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+	font-family: "VCR OSD Mono";
+	src: url("~@/assets/fonts/VCROSDMono.woff2") format("woff2"),
+		url("~@/assets/fonts/VCROSDMono.woff") format("woff");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;900&display=swap");
@@ -40,30 +41,40 @@ $breakpoint-height: 37.5em; // 680px;
 // --------------------------
 
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 html {
-    box-sizing: border-box;
-    font-size: 50%;
+	box-sizing: border-box;
+	font-size: 50%;
 
 	@media only screen and (min-width: $breakpoint-medium) {
-        font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+		font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
 	}
 }
 
 body {
-    font-family: $main-font;
-    font-weight: 400;
-    line-height: 1.33;
-    color: $color-grey;
-    background-image: linear-gradient(135deg, rgba($color-red, 0.15), rgba($color-red, 0.3));
-    min-height: 100vh;
+	font-family: $main-font;
+	font-weight: 400;
+	line-height: 1.33;
+	color: $color-grey;
+	background-image: linear-gradient(135deg, rgba($color-red, 0.15), rgba($color-red, 0.3));
+	min-height: 100vh;
+}
+
+// --------------------------
+// ANIMATIONS
+// --------------------------
+
+@keyframes flashing {
+	50% {
+		opacity: 0;
+	}
 }
