--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -110,7 +110,8 @@ body {
 			-moz-appearance: none;
 
 			&:hover,
-			&:focus {
+			&:focus,
+			&:active {
 				cursor: pointer;
 				outline: none;
 				color: $color-green;
@@ -328,7 +329,7 @@ body {
 			background-color: $color-green;
 
 			&.active {
-				box-shadow: 0px 0px 10px 5px rgba(161,255,130,0.5);
+				box-shadow: 0px 0px 10px 5px rgba(161, 255, 130, 0.5);
 				animation: flashing 0.33s linear infinite;
 			}
 		}
@@ -337,7 +338,7 @@ body {
 
 			&.active {
 				background-color: lighten($color-red, 15%);
-				box-shadow: 0px 0px 10px 5px rgba(97,4,30,0.3);
+				box-shadow: 0px 0px 10px 5px rgba(97, 4, 30, 0.3);
 				animation: flashing 0.33s linear infinite;
 			}
 		}
@@ -390,6 +391,11 @@ body {
 		transition: all 0.15s ease-in;
 		-webkit-appearance: none;
 		-moz-appearance: none;
+
+		&:focus,
+		&:active {
+			outline: none;
+		}
 	}
 
 	.controls__up,
